--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.0-beta.10"
+    "astro": "^5.0.0-beta.10",
+    "graphql-request": "^7.1.2",
+    "install": "^0.13.0",
+    "node-fetch": "^3.3.2",
+    "npm": "^10.9.1"
   }
 }
