--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.6.3",
+    "@astrojs/tailwind": "^5.1.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@unpic/react": "^0.1.14",
     "astro": "^5.0.0-beta.10",
+    "astro-font": "^0.1.81",
     "graphql-request": "^7.1.2",
     "install": "^0.13.0",
     "node-fetch": "^3.3.2",
-    "npm": "^10.9.1"
+    "npm": "^10.9.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
+    "react-svg": "^16.2.0",
+    "tailwindcss": "^3.4.15",
+    "tailwindcss-rfs": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.0"
   }
 }
