--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@unpic/react": "^0.1.14",
     "astro": "^5.0.0-beta.10",
     "astro-font": "^0.1.81",
+    "autoprefixer": "^10.4.20",
     "graphql-request": "^7.1.2",
     "install": "^0.13.0",
     "node-fetch": "^3.3.2",
     "npm": "^10.9.1",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
