--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.2",
+    "@splidejs/splide": "^4.1.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@unpic/astro": "^0.0.47",
     "@unpic/react": "^0.1.14",
     "astro": "^5.0.0-beta.10",
     "astro-font": "^0.1.81",
