--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "node-fetch": "^3.3.2",
     "npm": "^10.9.1",
     "postcss": "^8.4.49",
+    "postcss-load-config": "^6.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
     "react-svg": "^16.2.0",
+    "rfs": "^10.0.0",
     "tailwindcss": "^3.4.15",
     "tailwindcss-rfs": "^5.0.0"
   },
