--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "richboro-astro-jsx-experimental",
   "type": "module",
   "version": "0.0.1",
+  "comments": {
+    "help": "Do this before copying to a new site: https://github.com/raineorshine/npm-check-updates"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,31 +12,33 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.6.3",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/react": "^4.1.2",
+    "@astrojs/tailwind": "^5.1.4",
     "@splidejs/splide": "^4.1.4",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@unpic/astro": "^0.0.47",
-    "@unpic/react": "^0.1.14",
-    "astro": "^5.0.0-beta.10",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@unpic/astro": "^0.1.0",
+    "@unpic/react": "^0.1.15",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "astro": "^5.1.2",
     "astro-font": "^0.1.81",
     "autoprefixer": "^10.4.20",
     "graphql-request": "^7.1.2",
     "install": "^0.13.0",
     "node-fetch": "^3.3.2",
-    "npm": "^10.9.1",
+    "npm": "^11.0.0",
     "postcss": "^8.4.49",
     "postcss-load-config": "^6.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
     "react-svg": "^16.2.0",
     "rfs": "^10.0.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-rfs": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.10.0"
+    "@types/node": "^22.10.5"
   }
 }
