--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "astro": "^5.1.2",
     "astro-font": "^0.1.81",
     "autoprefixer": "^10.4.20",
+    "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "install": "^0.13.0",
     "node-fetch": "^3.3.2",
